--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "pinia": "^2.1.7",
     "react-redux": "^9.2.0",
     "vue": "^3.4.21",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
