--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.11.2",
     "axios": "^1.13.4",
+    "lodash": "^4.17.23",
     "pinia": "^2.1.7",
     "react-redux": "^9.2.0",
     "vue": "^3.4.21",
@@ -18,6 +19,7 @@
     "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.23",
     "@vitejs/plugin-vue": "^5.0.4",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
